cmake_minimum_required(VERSION 3.27)
project(pintia_mooc_c_program C)

set(CMAKE_C_STANDARD 11)

add_executable(7-1 7-1.c)
add_executable(7-2 7-2.c)
add_executable(7-3 7-3.c)
add_executable(7-4 7-4.c)
add_executable(7-5 7-5.c)
add_executable(7-6 7-6.c)
add_executable(7-7 7-7.c)
add_executable(7-8 7-8.c)
add_executable(7-9 7-9.c)
add_executable(7-10 7-10.c)
add_executable(7-11 7-11.c)
add_executable(7-20 7-20.c)
add_executable(7-93 7-93.c)
add_executable(7-94 7-94.c)
add_executable(7-95 7-95.c)
add_executable(7-96 7-96.c)
add_executable(7-97 7-97.c)
add_executable(7-98 7-98.c)
add_executable(7-99 7-99.c)
add_executable(7-100 7-100.c)

